@@ -1,6 +1,11 @@
 2005-06-23  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
+	Set the window title to the track name when playing.
+
+2005-06-23  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-play.c:
 	Check the iter is valid before using it.
 
 2005-06-23  Ross Burton  <ross@burtonini.com>
